--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   background-image: url("../img/voit5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
 }
 
 #questions{
@@ -13,4 +17,8 @@
 color: rgba(0, 0, 0, 0.9);
 background-color: rgba(255, 255, 255, 0.3);
 text-align: center;
+}
+
+#jarDiv, #waspDiv, #dogDiv, #tortDiv{
+  display: none;
 }
