--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 .bgimage {
   background-image: url("../img/voit5.jpg");
   background-repeat: no-repeat;
@@ -21,6 +22,21 @@
   font-size: 18pt;
 }
 
+#introContainer{
+  padding-left: 13px;
+  padding-bottom: 20px;
+  align-content: center;
+  font-size: 18pt;
+  color: rgb(255, 255, 255);
+  border: solid;
+  border-width: 5px;
+  border-color: rgba(250, 250, 250, .7);
+  border-radius: 15px;
+}
+
+#name{
+  color: rgb(0, 0, 0);
+}
 .jumbotron {
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
@@ -45,6 +61,6 @@
   border-radius: 15px;
 }
 
-#jarDiv, #waspDiv, #dogDiv, #tortDiv, #resultDiv {
+#questions, #calfDiv, #jarDiv, #waspDiv, #dogDiv, #tortDiv, #resultDiv {
   display: none;
 }
